overflow issue fixed

--- a/src/Components/PastEvents/PastEvents.css
+++ b/src/Components/PastEvents/PastEvents.css
@@ -16,13 +16,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 295px;
+  margin: 0 30px;
 }
 
 .gallery-container {
   position: relative;
   height: 50vh;
-  width: 200vh;
+  width: 100%;
   overflow: hidden;
 }
 
